==> jamolnng/nrf-test/src/drivers/display/gc9a01.cpp <==
#define DT_DRV_COMPAT buydisplay_gc9a01
#include <string.h>
#include <zephyr/device.h>
#include <zephyr/init.h>
#include <zephyr/sys/byteorder.h>
#include <zephyr/drivers/display.h>
#include <zephyr/drivers/gpio.h>
#include <zephyr/drivers/spi.h>
#include <zephyr/sys/byteorder.h>
#include <zephyr/kernel.h>
#include <math.h>
#include <zephyr/logging/log.h>
#include <inttypes.h>
#include <zephyr/pm/pm.h>
#include <zephyr/pm/device.h>
#include <zephyr/pm/policy.h>
#include <array>

int gc9a01_write_cmd(const device *dev, uint8_t cmd)
{
  const auto *config = (gc9a01_config_t *)dev->config;
  struct spi_buf buf = {.buf = &cmd, .len = sizeof(cmd)};
  struct spi_buf_set buf_set = {.buffers = &buf, .count = 1};
  gpio_pin_set_dt(&config->dc_gpio, 0);
  if (spi_write_dt(&config->bus, &buf_set) != 0)
  {
    LOG_ERR("Failed sending command");
    return -EIO;
  }
  return 0;
}

int gc9a01_write_data(const device *dev, const uint8_t *data, size_t len)
{
  const auto *config = (gc9a01_config_t *)dev->config;
  struct spi_buf buf = {.buf = (void *)data, .len = len};
  struct spi_buf_set buf_set = {.buffers = &buf, .count = 1};
  gpio_pin_set_dt(&config->dc_gpio, 1);
  if (spi_write_dt(&config->bus, &buf_set) != 0)
  {
    LOG_ERR("Failed sending data");
    return -EIO;
  }
  return 0;
}

int gc9a01_init(const device *dev)
{
  const auto *config = (gc9a01_config_t *)dev->config;
  if (!device_is_ready(config->reset_gpio.port))
  {
    LOG_ERR("Reset GPIO device not ready");
    return -ENODEV;
  }

  if (!device_is_ready(config->dc_gpio.port))
  {
    LOG_ERR("DC GPIO device not ready");
    return -ENODEV;
  }

  if (!device_is_ready(config->bl_gpio.port))
  {
    LOG_ERR("Busy GPIO device not ready");
    return -ENODEV;
  }

  gpio_pin_configure_dt(&config->reset_gpio, GPIO_OUTPUT_INACTIVE);
  gpio_pin_configure_dt(&config->dc_gpio, GPIO_OUTPUT_INACTIVE);
  gpio_pin_configure_dt(&config->bl_gpio, GPIO_OUTPUT_INACTIVE); // Default to 0 brightness

  return gc9a01_init_display(dev);
}
